syntax = "proto3";

option go_package = "github.com/cerminan/torrent/pb";

service Torrent {
  rpc Files(FilesReq) returns (FilesRes) {}
  rpc ReadAt(ReadAtReq) returns (ReadAtRes) {}
}

message FilesReq {
  string magnet = 1;
}

message FilesRes {
  repeated file files = 1;
}

message file {
  string torrentHash = 1;
  string name = 2;
  int64 length = 3;
}

message ReadAtReq {
  file file = 1;
  int32 index = 2;
  int64 off = 3;
  int64 ln = 4;
}

message ReadAtRes {
  bytes buffer = 1;
}
